hphp/hack/test/typecheck/reserved_name4.php.exp
File "reserved_name4.php", line 4, characters 9-16:
__FILE__ cannot be used as it is reserved. (Naming[2068])
